verified button styling fix on mobile

--- a/src/components/CertificateVerifyBlock/certificateVerifyBlock.scss
+++ b/src/components/CertificateVerifyBlock/certificateVerifyBlock.scss
@@ -61,3 +61,17 @@
 .verification-text {
   font-size: 1.25rem;
 }
+.d-flex {
+  display: -ms-flexbox!important;
+  display: flex!important;
+}
+
+@media only screen and (max-width: 550px) {
+  .verifyBlocksContainer {
+    position: relative;
+    margin: 0px 15px 15px 15px;
+  }
+  .d-flex {
+    display: block!important;
+  }
+}
